theming and routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
     </select>
 </div>
 <!-- <app-layout></app-layout> -->
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+
+
 <!-- <app-signup></app-signup> -->
 <!-- <app-dashboard></app-dashboard> -->
 <router-outlet />
