--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,6 @@
 <div class="login-container">
+  <!-- <div class="th_pri_500">Test the primary colour</div>
+  <div class="th_pri_50">Test the primary colour</div> -->
   <form [formGroup]="addressForm" novalidate (ngSubmit)="onSignin()">
     <mat-card class="signin-card">
       <mat-card-header>
