--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@use './assets/styles/palette.scss' as palette;
+@use './assets/styles/theme-theme' as styles;
+@use './assets/styles/theme';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
